--- a/css/bulma.css
+++ b/css/bulma.css
@@ -124,7 +124,7 @@ a {
     color: #363636; }
 
 code {
-  background-color: #f0f0f0;
+  background-color: white;
   color: #ff8e8e;
   font-size: 0.8em;
   font-weight: normal;
@@ -156,7 +156,7 @@ strong {
   font-weight: 700; }
 
 pre {
-  background-color: #f0f0f0;
+  background-color: white;
   color: #4a4a4a;
   font-size: 0.8em;
   white-space: pre;
@@ -401,13 +401,13 @@ a.has-text-info:hover, a.has-text-info:focus {
   color: #4a8787; }
 
 .has-text-success {
-  color: #68ba97; }
+  color: #8372bb; }
 
 a.has-text-success:hover, a.has-text-success:focus {
-  color: #4ba47e; }
+  color: #6651a9; }
 
 .has-text-warning {
-  color: #ffec8e; }
+  color: #dbb600; }
 
 a.has-text-warning:hover, a.has-text-warning:focus {
   color: #ffe35b; }
@@ -549,7 +549,7 @@ a.box:active {
     color: #4a4a4a;
     text-decoration: underline; }
     .button.is-link:hover, .button.is-link.is-hovered, .button.is-link:focus, .button.is-link.is-focused, .button.is-link:active, .button.is-link.is-active {
-      background-color: #f0f0f0;
+      background-color: white;
       color: #363636; }
     .button.is-link[disabled] {
       background-color: transparent;
@@ -916,60 +916,60 @@ a.box:active {
         box-shadow: none;
         color: #fff; }
   .button.is-success {
-    background-color: #68ba97;
+    background-color: #8372bb;
     border-color: transparent;
     color: #fff; }
     .button.is-success:hover, .button.is-success.is-hovered {
-      background-color: #5fb691;
+      background-color: #7b69b7;
       border-color: transparent;
       color: #fff; }
     .button.is-success:focus, .button.is-success.is-focused {
       border-color: transparent;
-      box-shadow: 0 0 0.5em rgba(104, 186, 151, 0.25);
+      box-shadow: 0 0 0.5em rgba(131, 114, 187, 0.25);
       color: #fff; }
     .button.is-success:active, .button.is-success.is-active {
-      background-color: #56b28b;
+      background-color: #7461b3;
       border-color: transparent;
       box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.2);
       color: #fff; }
     .button.is-success[disabled] {
-      background-color: #68ba97;
+      background-color: #8372bb;
       border-color: transparent;
       box-shadow: none; }
     .button.is-success.is-inverted {
       background-color: #fff;
-      color: #68ba97; }
+      color: #8372bb; }
       .button.is-success.is-inverted:hover {
         background-color: #f2f2f2; }
       .button.is-success.is-inverted[disabled] {
         background-color: #fff;
         border-color: transparent;
         box-shadow: none;
-        color: #68ba97; }
+        color: #8372bb; }
     .button.is-success.is-loading:after {
       border-color: transparent transparent #fff #fff !important; }
     .button.is-success.is-outlined {
       background-color: transparent;
-      border-color: #68ba97;
-      color: #68ba97; }
+      border-color: #8372bb;
+      color: #8372bb; }
       .button.is-success.is-outlined:hover, .button.is-success.is-outlined:focus {
-        background-color: #68ba97;
-        border-color: #68ba97;
+        background-color: #8372bb;
+        border-color: #8372bb;
         color: #fff; }
       .button.is-success.is-outlined.is-loading:after {
-        border-color: transparent transparent #68ba97 #68ba97 !important; }
+        border-color: transparent transparent #8372bb #8372bb !important; }
       .button.is-success.is-outlined[disabled] {
         background-color: transparent;
-        border-color: #68ba97;
+        border-color: #8372bb;
         box-shadow: none;
-        color: #68ba97; }
+        color: #8372bb; }
     .button.is-success.is-inverted.is-outlined {
       background-color: transparent;
       border-color: #fff;
       color: #fff; }
       .button.is-success.is-inverted.is-outlined:hover, .button.is-success.is-inverted.is-outlined:focus {
         background-color: #fff;
-        color: #68ba97; }
+        color: #8372bb; }
       .button.is-success.is-inverted.is-outlined[disabled] {
         background-color: transparent;
         border-color: #fff;
@@ -1243,7 +1243,7 @@ input[type="submit"].button {
     font-size: 1em;
     margin-bottom: 1em; }
   .content blockquote {
-    background-color: #f0f0f0;
+    background-color: white;
     border-left: 5px solid #dbdbdb;
     padding: 1.25em 1.5em; }
   .content ol {
@@ -1281,7 +1281,7 @@ input[type="submit"].button {
       color: #363636;
       text-align: left; }
     .content table tr:hover {
-      background-color: #f0f0f0; }
+      background-color: white; }
     .content table thead td,
     .content table thead th {
       border-width: 0 0 2px;
@@ -1346,8 +1346,8 @@ input[type="submit"].button {
     border-color: #7a7a7a; }
   .input[disabled],
   .textarea[disabled] {
-    background-color: #f0f0f0;
-    border-color: #f0f0f0;
+    background-color: white;
+    border-color: white;
     box-shadow: none;
     color: #7a7a7a; }
     .input[disabled]::-moz-placeholder,
@@ -1385,7 +1385,7 @@ input[type="submit"].button {
     border-color: #5da7a7; }
   .input.is-success,
   .textarea.is-success {
-    border-color: #68ba97; }
+    border-color: #8372bb; }
   .input.is-warning,
   .textarea.is-warning {
     border-color: #ffec8e; }
@@ -1500,8 +1500,8 @@ input[type="submit"].button {
     .select select:focus, .select select.is-focused, .select select:active, .select select.is-active {
       border-color: #7a7a7a; }
     .select select[disabled] {
-      background-color: #f0f0f0;
-      border-color: #f0f0f0;
+      background-color: white;
+      border-color: white;
       box-shadow: none;
       color: #7a7a7a; }
       .select select[disabled]::-moz-placeholder {
@@ -1517,7 +1517,7 @@ input[type="submit"].button {
     .select select::-ms-expand {
       display: none; }
     .select select[disabled]:hover {
-      border-color: #f0f0f0; }
+      border-color: white; }
   .select:hover:after {
     border-color: #363636; }
   .select.is-white select {
@@ -1533,7 +1533,7 @@ input[type="submit"].button {
   .select.is-info select {
     border-color: #5da7a7; }
   .select.is-success select {
-    border-color: #68ba97; }
+    border-color: #8372bb; }
   .select.is-warning select {
     border-color: #ffec8e; }
   .select.is-danger select {
@@ -1601,7 +1601,7 @@ input[type="submit"].button {
   .help.is-info {
     color: #5da7a7; }
   .help.is-success {
-    color: #68ba97; }
+    color: #8372bb; }
   .help.is-warning {
     color: #ffec8e; }
   .help.is-danger {
@@ -1862,7 +1862,7 @@ input[type="submit"].button {
     width: 128px; }
 
 .notification {
-  background-color: #f0f0f0;
+  background-color: white;
   border-radius: 3px;
   padding: 1.25rem 2.5rem 1.25rem 1.5rem;
   position: relative; }
@@ -1903,7 +1903,7 @@ input[type="submit"].button {
     background-color: #5da7a7;
     color: #fff; }
   .notification.is-success {
-    background-color: #68ba97;
+    background-color: #8372bb;
     color: #fff; }
   .notification.is-warning {
     background-color: #ffec8e;
@@ -1958,9 +1958,9 @@ input[type="submit"].button {
   .progress.is-info::-moz-progress-bar {
     background-color: #5da7a7; }
   .progress.is-success::-webkit-progress-value {
-    background-color: #68ba97; }
+    background-color: #8372bb; }
   .progress.is-success::-moz-progress-bar {
-    background-color: #68ba97; }
+    background-color: #8372bb; }
   .progress.is-warning::-webkit-progress-value {
     background-color: #ffec8e; }
   .progress.is-warning::-moz-progress-bar {
@@ -2037,7 +2037,7 @@ input[type="submit"].button {
 
 .tag {
   align-items: center;
-  background-color: #f0f0f0;
+  background-color: white;
   border-radius: 290486px;
   color: #4a4a4a;
   display: inline-flex;
@@ -2070,7 +2070,7 @@ input[type="submit"].button {
     background-color: #5da7a7;
     color: #fff; }
   .tag.is-success {
-    background-color: #68ba97;
+    background-color: #8372bb;
     color: #fff; }
   .tag.is-warning {
     background-color: #ffec8e;
@@ -2258,7 +2258,7 @@ input[type="submit"].button {
 
 .number {
   align-items: center;
-  background-color: #f0f0f0;
+  background-color: white;
   border-radius: 290486px;
   display: inline-flex;
   font-size: 1.25rem;
@@ -2446,7 +2446,7 @@ input[type="submit"].button {
     display: block;
     padding: 0.5em 0.75em; }
     .menu-list a:hover {
-      background-color: #f0f0f0;
+      background-color: white;
       color: #3b739e; }
     .menu-list a.is-active {
       background-color: #3b739e;
@@ -2467,7 +2467,7 @@ input[type="submit"].button {
     margin-bottom: 1em; }
 
 .message {
-  background-color: #f0f0f0;
+  background-color: white;
   border-radius: 3px;
   font-size: 1rem; }
   .message:not(:last-child) {
@@ -2521,13 +2521,13 @@ input[type="submit"].button {
       border-color: #5da7a7;
       color: #324747; }
   .message.is-success {
-    background-color: #f8fcfa; }
+    background-color: #f9f8fc; }
     .message.is-success .message-header {
-      background-color: #68ba97;
+      background-color: #8372bb;
       color: #fff; }
     .message.is-success .message-body {
-      border-color: #68ba97;
-      color: #304d40; }
+      border-color: #8372bb;
+      color: #584b83; }
   .message.is-warning {
     background-color: #fffdf5; }
     .message.is-warning .message-header {
@@ -2678,7 +2678,7 @@ input[type="submit"].button {
 .modal-card-head,
 .modal-card-foot {
   align-items: center;
-  background-color: #f0f0f0;
+  background-color: white;
   display: flex;
   flex-shrink: 0;
   justify-content: flex-start;
@@ -2751,7 +2751,7 @@ input[type="submit"].button {
     .nav-toggle span:nth-child(3) {
       margin-top: 4px; }
   .nav-toggle:hover {
-    background-color: #f0f0f0; }
+    background-color: white; }
   .nav-toggle.is-active span {
     background-color: #3b739e; }
     .nav-toggle.is-active span:nth-child(1) {
@@ -3053,7 +3053,7 @@ a.nav-item {
     border-top: 1px solid #dbdbdb; }
 
 .panel-heading {
-  background-color: #f0f0f0;
+  background-color: white;
   border-radius: 3px 3px 0 0;
   color: #363636;
   font-size: 1.25em;
@@ -3104,7 +3104,7 @@ label.panel-block {
   cursor: pointer; }
   a.panel-block:hover,
   label.panel-block:hover {
-    background-color: #f0f0f0; }
+    background-color: white; }
 
 .panel-icon {
   display: inline-block;
@@ -3182,7 +3182,7 @@ label.panel-block {
     border: 1px solid transparent;
     border-radius: 3px 3px 0 0; }
     .tabs.is-boxed a:hover {
-      background-color: #f0f0f0;
+      background-color: white;
       border-bottom-color: #dbdbdb; }
   .tabs.is-boxed li.is-active a {
     background-color: white;
@@ -3196,7 +3196,7 @@ label.panel-block {
     margin-bottom: 0;
     position: relative; }
     .tabs.is-toggle a:hover {
-      background-color: #f0f0f0;
+      background-color: white;
       border-color: #b5b5b5;
       z-index: 2; }
   .tabs.is-toggle li + li {
@@ -4170,7 +4170,7 @@ label.panel-block {
       .hero.is-info .nav-menu .nav-item {
         border-top-color: rgba(255, 255, 255, 0.2); } }
   .hero.is-success {
-    background-color: #68ba97;
+    background-color: #8372bb;
     color: #fff; }
     .hero.is-success a:not(.button),
     .hero.is-success strong {
@@ -4186,7 +4186,7 @@ label.panel-block {
       box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2); }
     @media screen and (max-width: 999px) {
       .hero.is-success .nav-menu {
-        background-color: #68ba97; } }
+        background-color: #8372bb; } }
     .hero.is-success a.nav-item,
     .hero.is-success .nav-item a:not(.button) {
       color: rgba(255, 255, 255, 0.7); }
@@ -4208,12 +4208,12 @@ label.panel-block {
     .hero.is-success .tabs.is-boxed li.is-active a, .hero.is-success .tabs.is-boxed li.is-active a:hover, .hero.is-success .tabs.is-toggle li.is-active a, .hero.is-success .tabs.is-toggle li.is-active a:hover {
       background-color: #fff;
       border-color: #fff;
-      color: #68ba97; }
+      color: #8372bb; }
     .hero.is-success.is-bold {
-      background-image: linear-gradient(141deg, #3fb06d 0%, #68ba97 71%, #75c7b1 100%); }
+      background-image: linear-gradient(141deg, #4c45b5 0%, #8372bb 71%, #9c7fc8 100%); }
       @media screen and (max-width: 999px) {
         .hero.is-success.is-bold .nav-menu {
-          background-image: linear-gradient(141deg, #3fb06d 0%, #68ba97 71%, #75c7b1 100%); } }
+          background-image: linear-gradient(141deg, #4c45b5 0%, #8372bb 71%, #9c7fc8 100%); } }
     @media screen and (max-width: 999px) {
       .hero.is-success .nav-toggle span {
         background-color: #fff; }
@@ -4412,7 +4412,7 @@ label.panel-block {
       padding: 18rem 1.5rem; } }
 
 .footer {
-  background-color: #f0f0f0;
+  background-color: white;
   padding: 3rem 1.5rem 6rem; }
 
 /*# sourceMappingURL=bulma.css.map */
