--- a/sass/utilities/derived-variables.sass
+++ b/sass/utilities/derived-variables.sass
@@ -1,7 +1,7 @@
 $primary: $blue !default
 
 $info: $turquoise !default
-$success: $green !default
+$success: $purple !default
 $warning: $yellow !default
 $danger: $red !default
 
@@ -20,7 +20,7 @@ $red-invert: findColorInvert($red) !default
 
 $primary-invert: $blue-invert !default
 $info-invert: $turquoise-invert !default
-$success-invert: $green-invert !default
+$success-invert: $purple-invert !default
 $warning-invert: $yellow-invert !default
 $danger-invert: $red-invert !default
 $light-invert: $dark !default
@@ -28,7 +28,7 @@ $dark-invert: $light !default
 
 // General colors
 
-$background: $white-ter !default
+$background: $white !default
 
 $border: $grey-lighter !default
 $border-hover: $grey-light !default
