--- a/sass/utilities/initial-variables.sass
+++ b/sass/utilities/initial-variables.sass
@@ -16,6 +16,7 @@ $white:        hsl(0, 0%, 100%) !default
 
 $orange:       rgba(255,207,142,1) !default
 $yellow:       rgba(255,236,142,1) !default
+$yellow-dark:  rgba(245,217, 82,1) !default
 $green:        rgba(104,186,151,1) !default
 $turquoise:    rgba( 93,167,167,1) !default
 $blue:         rgba( 59,115,158,1) !default
