Wrap labels if inside a field with addons
Fixes #777

--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -367,6 +367,8 @@ $help-size: $size-small !default
   font-weight: $label-weight
   &:not(:last-child)
     margin-bottom: 0.5em
+  .has-addons &
+    flex: 0 0 100%
   // Sizes
   &.is-small
     font-size: $size-small
@@ -393,6 +395,7 @@ $help-size: $size-small !default
   &.has-addons
     display: flex
     justify-content: flex-start
+    flex-wrap: wrap
     .control
       &:not(:last-child)
         margin-right: -1px
