Updated package.json and newly added components

--- a/sass/components/breadcrumb.sass
+++ b/sass/components/breadcrumb.sass
@@ -40,9 +40,9 @@ $breadcrumb-item-separator-color: $text !default
     justify-content: flex-start
   .icon
     &:first-child
-      margin-right: 0.5em
+      margin-#{$right}: 0.5em
     &:last-child
-      margin-left: 0.5em
+      margin-#{$left}: 0.5em
   // Alignment
   &.is-centered
     ol, ul
