--- a/sass/components/dropdown.sass
+++ b/sass/components/dropdown.sass
@@ -28,7 +28,7 @@ $dropdown-divider-background-color: $border !default
 
 .dropdown-menu
   display: none
-  left: 0
+  $left: 0
   min-width: 12rem
   padding-top: $dropdown-content-offset
   position: absolute
@@ -51,7 +51,7 @@ $dropdown-divider-background-color: $border !default
   position: relative
 
 a.dropdown-item
-  padding-right: 3rem
+  padding-#{$right}: 3rem
   white-space: nowrap
   &:hover
     background-color: $dropdown-item-hover-background-color
