--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -57,7 +57,7 @@ $navbar-divider-background-color: $border !default
 
 .navbar-burger
   +hamburger($navbar-height)
-  margin-left: auto
+  margin-#{$left}: auto
 
 .navbar-menu
   display: none
@@ -104,7 +104,7 @@ a.navbar-item,
   flex-shrink: 1
 
 .navbar-link
-  padding-right: 2.5em
+  padding-#{$right}: 2.5em
 
 .navbar-dropdown
   font-size: 0.875rem
@@ -183,17 +183,17 @@ a.navbar-item,
     &::after
       +arrow($navbar-dropdown-arrow)
       margin-top: -0.375em
-      right: 1.125em
+      #{$right}: 1.125em
       top: 50%
   .navbar-menu
     flex-grow: 1
     flex-shrink: 0
   .navbar-start
     justify-content: flex-start
-    margin-right: auto
+    margin-#{$right}: auto
   .navbar-end
     justify-content: flex-end
-    margin-left: auto
+    margin-#{$left}: auto
   .navbar-dropdown
     background-color: $navbar-dropdown-background-color
     border-bottom-left-radius: $navbar-dropdown-radius
@@ -202,7 +202,7 @@ a.navbar-item,
     box-shadow: 0 8px 8px rgba($black, 0.1)
     display: none
     font-size: 0.875rem
-    left: 0
+    #{$left}: 0
     min-width: 100%
     position: absolute
     top: 100%
@@ -211,7 +211,7 @@ a.navbar-item,
       padding: 0.375rem 1rem
       white-space: nowrap
     a.navbar-item
-      padding-right: 3rem
+      padding-#{$right}: 3rem
       &:hover
         background-color: $navbar-dropdown-item-hover-background-color
         color: $navbar-dropdown-item-hover-color
