Move level and media object

--- a/docs/documentation/components/level.html
+++ b/docs/documentation/components/level.html
@@ -4,6 +4,8 @@ doc-tab: components
 doc-subtab: level
 ---
 
+<meta http-equiv="refresh" content="0; url={{ site.url }}/documentation/layout/level/">
+
 {% include subnav-components.html %}
 
 <section class="section">
