--- a/docs/documentation/layout/media-object.html
+++ b/docs/documentation/layout/media-object.html
@@ -1,64 +1,8 @@
 ---
 layout: documentation
-doc-tab: components
+doc-tab: layout
 doc-subtab: media-object
 ---
-
-<meta http-equiv="refresh" content="0; url={{ site.url }}/documentation/layout/media-object/">
-
-{% include subnav-components.html %}
-
-<section class="section">
-  <div class="container">
-    <h1 class="title">Media Object</h1>
-    <h2 class="subtitle">The famous <strong>media object</strong> prevalent in social media interfaces, but useful in any context</h2>
-    {%
-      include meta.html
-      colors=false
-      sizes=false
-      variables=false
-    %}
-
-    <hr>
-
-    <div class="content">
-      <p>The <a href="http://www.stubbornella.org/content/2010/06/25/the-media-object-saves-hundreds-of-lines-of-code">media object</a> is a UI element perfect for repeatable and nestable content.</p>
-    </div>
-
-    <div class="bd-structure">
-      <article class="media">
-        <figure class="media-left bd-structure-item" title="media-left">
-          <p class="image is-64x64">
-            <img src="{{site.url}}/images/placeholders/128x128.png">
-          </p>
-        </figure>
-        <div class="media-content bd-structure-item bd-is-structure-right" title="media-content">
-          <div class="content">
-            <p>
-              <strong>John Smith</strong> <small>@johnsmith</small> <small>31m</small>
-              <br>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.
-            </p>
-          </div>
-          <nav class="level">
-            <div class="level-left">
-              <a class="level-item">
-                <span class="icon is-small"><i class="fa fa-reply"></i></span>
-              </a>
-              <a class="level-item">
-                <span class="icon is-small"><i class="fa fa-retweet"></i></span>
-              </a>
-              <a class="level-item">
-                <span class="icon is-small"><i class="fa fa-heart"></i></span>
-              </a>
-            </div>
-          </nav>
-        </div>
-        <div class="media-right bd-structure-item" title="media-right">
-          <button class="delete"></button>
-        </div>
-      </article>
-    </div>
 
 {% capture media_example %}
 <article class="media">
@@ -94,16 +38,6 @@ doc-subtab: media-object
   </div>
 </article>
 {% endcapture %}
-<div class="bd-example">
-{{media_example}}
-</div>
-{% highlight html %}
-{{media_example}}
-{% endhighlight %}
-
-    <div class="content">
-      <p>You can include <em>any</em> other Bulma element, like inputs, textareas, icons, buttons... or even a <strong>nav bar</strong>.</p>
-    </div>
 
 {% capture media_bis_example %}
 <article class="media">
@@ -135,19 +69,6 @@ doc-subtab: media-object
   </div>
 </article>
 {% endcapture %}
-<div class="bd-example">
-{{media_bis_example}}
-</div>
-{% highlight html %}
-{{media_bis_example}}
-{% endhighlight %}
-
-    <hr>
-
-    <h3 class="title">Nesting</h3>
-    <div class="content">
-      <p>You can nest media objects up to <strong>3 levels</strong> deep.</p>
-    </div>
 {% capture media_nested_example %}
 <article class="media">
   <figure class="media-left">
@@ -233,12 +154,83 @@ doc-subtab: media-object
   </div>
 </article>
 {% endcapture %}
-<div class="bd-example">
-{{media_nested_example}}
-</div>
-{% highlight html %}
-{{media_nested_example}}
-{% endhighlight %}
+
+{% include subnav-layout.html %}
+
+<section class="section">
+  <div class="container">
+    <h1 class="title">Media Object</h1>
+    <h2 class="subtitle">The famous <strong>media object</strong> prevalent in social media interfaces, but useful in any context</h2>
+
+    <hr>
+
+    <div class="content">
+      <p>The <a href="http://www.stubbornella.org/content/2010/06/25/the-media-object-saves-hundreds-of-lines-of-code">media object</a> is a UI element perfect for repeatable and nestable content.</p>
+    </div>
+
+    <div class="bd-structure">
+      <article class="media">
+        <figure class="media-left bd-structure-item" title="media-left">
+          <p class="image is-64x64">
+            <img src="{{site.url}}/images/placeholders/128x128.png">
+          </p>
+        </figure>
+        <div class="media-content bd-structure-item bd-is-structure-right" title="media-content">
+          <div class="content">
+            <p>
+              <strong>John Smith</strong> <small>@johnsmith</small> <small>31m</small>
+              <br>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.
+            </p>
+          </div>
+          <nav class="level">
+            <div class="level-left">
+              <a class="level-item">
+                <span class="icon is-small"><i class="fa fa-reply"></i></span>
+              </a>
+              <a class="level-item">
+                <span class="icon is-small"><i class="fa fa-retweet"></i></span>
+              </a>
+              <a class="level-item">
+                <span class="icon is-small"><i class="fa fa-heart"></i></span>
+              </a>
+            </div>
+          </nav>
+        </div>
+        <div class="media-right bd-structure-item" title="media-right">
+          <button class="delete"></button>
+        </div>
+      </article>
+    </div>
+
+    <div class="bd-example">
+      {{media_example}}
+    </div>
+
+    {% highlight html %}{{media_example}}{% endhighlight %}
+
+    <div class="content">
+      <p>You can include <em>any</em> other Bulma element, like inputs, textareas, icons, buttons... or even a <strong>nav bar</strong>.</p>
+    </div>
+
+    <div class="bd-example">
+      {{media_bis_example}}
+    </div>
+
+    {% highlight html %}{{media_bis_example}}{% endhighlight %}
+
+    <hr>
+
+    <h3 class="title">Nesting</h3>
+    <div class="content">
+      <p>You can nest media objects up to <strong>3 levels</strong> deep.</p>
+    </div>
+
+    <div class="bd-example">
+      {{media_nested_example}}
+    </div>
+
+    {% highlight html %}{{media_nested_example}}{% endhighlight %}
 
   </div>
 </section>
