--- a/docs/documentation/layout/media-object.html
+++ b/docs/documentation/layout/media-object.html
@@ -219,9 +219,8 @@ doc-subtab: media-object
 
     {% highlight html %}{{media_bis_example}}{% endhighlight %}
 
-    <hr>
+    {% include anchor.html name="Nesting" %}
 
-    <h3 class="title">Nesting</h3>
     <div class="content">
       <p>You can nest media objects up to <strong>3 levels</strong> deep.</p>
     </div>
