Add more snippets

--- a/docs/_includes/snippet.html
+++ b/docs/_includes/snippet.html
@@ -2,7 +2,7 @@
   <div class="bd-snippet-preview">
     {{ include.content }}
   </div>
-  <div class="bd-snippet-code">
+  <div class="bd-snippet-code {%unless include.clipped %}highlight-full{% endunless %}">
     {% highlight html %}{{ include.content }}{% endhighlight %}
   </div>
 </div>
