--- a/docs/_sass/example.sass
+++ b/docs/_sass/example.sass
@@ -64,11 +64,18 @@
 .bd-snippet-code
   background-color: $pre-background
   +tablet
-    align-items: stretch
-    display: flex
-    flex-direction: column
-    .highlight
+    &,
+    .highlight,
+    .highlight pre
+      align-items: stretch
+      display: flex
+      flex-direction: column
+    .highlight,
+    .highlight pre,
+    .highlight .language-html
       flex-grow: 1
+    .highlight pre
+      white-space: pre
 
 // Highlight
 .highlight.bd-is-hovering
