--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -9647,13 +9647,20 @@ html.route-index #carbon {
 }
 
 @media screen and (min-width: 769px), print {
-  .bd-snippet-code {
+  .bd-snippet-code,
+  .bd-snippet-code .highlight,
+  .bd-snippet-code .highlight pre {
     align-items: stretch;
     display: flex;
     flex-direction: column;
   }
-  .bd-snippet-code .highlight {
+  .bd-snippet-code .highlight,
+  .bd-snippet-code .highlight pre,
+  .bd-snippet-code .highlight .language-html {
     flex-grow: 1;
+  }
+  .bd-snippet-code .highlight pre {
+    white-space: pre;
   }
 }
 
