--- a/docs/documentation/components/pagination.html
+++ b/docs/documentation/components/pagination.html
@@ -245,11 +245,7 @@ variables:
 
     {% highlight html %}{{pagination_right_example}}{% endhighlight %}
 
-    <hr style="margin-bottom: 0;">
-
-    <h2 id="sizes" class="title" style="padding-top: 1.5rem;">
-      Sizes
-    </h2>
+    {% include anchor.html name="Sizes" %}
 
     <p class="content">
       The pagination comes in <strong>3 additional sizes</strong>.<br>
