--- a/docs/documentation/components/tabs.html
+++ b/docs/documentation/components/tabs.html
@@ -382,118 +382,76 @@ variables:
         The <strong>default</strong> tabs style has a single border at the bottom.</p>
     </div>
 
-    <div class="bd-example">
-      {{tabs_example}}
-    </div>
-    {% highlight html %}{{tabs_example}}{% endhighlight %}
+    {% include snippet.html content=tabs_example horizontal=true %}
 
-    <hr>
+    {% include snippet.html content=tabs_example horizontal=true clipped=true %}
 
-    <h3 class="title">Alignment</h3>
+    {% include anchor.html name="Alignment" %}
+
     <div class="content">
       <p>
         To align the tabs list, use the <code>is-centered</code> or <code>is-right</code> modifier on the <code>.tabs</code> container:
       </p>
     </div>
 
-    <div class="bd-example">
-      {{tabs_centered_example}}
-    </div>
-    {% highlight html %}{{tabs_centered_example}}{% endhighlight %}
+    {% include snippet.html content=tabs_centered_example horizontal=true clipped=true %}
 
-    <div class="bd-example">
-      {{tabs_right_example}}
-    </div>
-    {% highlight html %}{{tabs_right_example}}{% endhighlight %}
+    {% include snippet.html content=tabs_right_example horizontal=true clipped=true %}
 
-    <hr>
+    {% include anchor.html name="Icons" %}
 
-    <h3 class="title">Icons</h3>
     <div class="content">
       <p>You can use any of the <a href="http://fortawesome.github.io/Font-Awesome/">Font Awesome</a> <strong>icons</strong>.</p>
     </div>
 
-    <div class="bd-example">
-      {{tabs_icons_example}}
-    </div>
-    {% highlight html %}{{tabs_icons_example}}{% endhighlight %}
+    {% include snippet.html content=tabs_icons_example horizontal=true clipped=true %}
+
+    {% include snippet.html content=tabs_icons_example horizontal=true clipped=true %}
 
     {% include anchor.html name="Sizes" %}
     <div class="content">
       <p>You can choose between <strong>3 additional sizes</strong>: <code>is-small</code> <code>is-medium</code> and <code>is-large</code>.</p>
     </div>
 
-    <div class="bd-example">
-      {{tabs_small_example}}
-    </div>
-    {% highlight html %}{{tabs_small_example}}{% endhighlight %}
+    {% include snippet.html content=tabs_small_example horizontal=true clipped=true %}
 
-    <div class="bd-example">
-      {{tabs_medium_example}}
-    </div>
-    {% highlight html %}{{tabs_medium_example}}{% endhighlight %}
+    {% include snippet.html content=tabs_medium_example horizontal=true clipped=true %}
 
-    <div class="bd-example">
-      {{tabs_large_example}}
-    </div>
-    {% highlight html %}{{tabs_large_example}}{% endhighlight %}
+    {% include snippet.html content=tabs_large_example horizontal=true clipped=true %}
 
-    <hr>
+    {% include anchor.html name="Styles" %}
 
-    <h3 class="title">Styles</h3>
     <div class="content">
       If you want a more classic style with <strong>borders</strong>, just append the <code>is-boxed</code> modifier.
     </div>
 
-    <div class="bd-example">
-      {{tabs_boxed_example}}
-    </div>
-    {% highlight html %}{{tabs_boxed_example}}{% endhighlight %}
+    {% include snippet.html content=tabs_boxed_example horizontal=true clipped=true %}
 
     <p class="content">
       If you want <strong>mutually exclusive</strong> tabs (like radio buttons where clicking one deselects all other ones), use the <code>is-toggle</code> modifier.
     </p>
 
-    <div class="bd-example">
-      {{tabs_toggle_example}}
-    </div>
-    {% highlight html %}{{tabs_toggle_example}}{% endhighlight %}
+    {% include snippet.html content=tabs_toggle_example horizontal=true clipped=true %}
 
     <p class="content">
       If you want the tabs to take up the <strong>whole width</strong> available, use <code>is-fullwidth</code>.
     </p>
 
-    <div class="bd-example">
-      {{tabs_fullwidth_example}}
-    </div>
-    {% highlight html %}{{tabs_fullwidth_example}}{% endhighlight %}
+    {% include snippet.html content=tabs_fullwidth_example horizontal=true clipped=true %}
 
-    <hr>
+    {% include anchor.html name="Combining" %}
 
-    <h3 class="title">Combining</h3>
     <div class="content">
       <p>You can <strong>combine</strong> different modifiers. For example, you can have <strong>centered boxed</strong> tabs, or <strong>fullwidth toggle</strong> ones.</p>
     </div>
 
-    <div class="bd-example">
-      {{tabs_centered_boxed_example}}
-    </div>
-    {% highlight html %}{{tabs_centered_boxed_example}}{% endhighlight %}
+    {% include snippet.html content=tabs_centered_boxed_example horizontal=true clipped=true %}
 
-    <div class="bd-example">
-      {{tabs_toggle_fullwidth_example}}
-    </div>
-    {% highlight html %}{{tabs_toggle_fullwidth_example}}{% endhighlight %}
+    {% include snippet.html content=tabs_toggle_fullwidth_example horizontal=true clipped=true %}
 
-    <div class="bd-example">
-      {{tabs_centered_boxed_medium_example}}
-    </div>
-    {% highlight html %}{{tabs_centered_boxed_medium_example}}{% endhighlight %}
+    {% include snippet.html content=tabs_centered_boxed_medium_example horizontal=true clipped=true %}
 
-    <div class="bd-example">
-      {{tabs_toggle_fullwidth_large_example}}
-    </div>
-    {% highlight html %}{{tabs_toggle_fullwidth_large_example}}{% endhighlight %}
+    {% include snippet.html content=tabs_toggle_fullwidth_large_example horizontal=true clipped=true %}
 
     {% include variables.html %}
 
